<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_solve_riddle">SolveRiddleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for Solve Riddle Activity -->
    <string name="RiddleTextPlaceholder">Riddle Text</string>
    <string name="solutionTextPlaceholder">Riddle Solution Text</string>
    <string name="scoreTextPlaceholder">Score Text</string>

    <string name="solutionPrompt">Enter your guess here!</string>

    <string name="solveBtn">Solve</string>
    <string name="randomRiddleBtn">Get a random riddle!</string>
    <string name="giveUpBtn">Give up</string>
    <string name="title_activity_admin_edit_user">AdminEditUserActivity</string>
</resources>