<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/randomRiddleBtn"
        android:layout_width="145dp"
        android:layout_height="71dp"
        android:text="@string/randomRiddleBtn"
        app:layout_constraintBottom_toTopOf="@+id/guessEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/solveBtn"
        android:layout_width="247dp"
        android:layout_height="81dp"
        android:layout_marginTop="476dp"
        android:text="@string/solveBtn"
        app:layout_constraintBottom_toTopOf="@+id/giveUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/riddleTextView"
        android:layout_width="341dp"
        android:layout_height="116dp"
        android:layout_marginTop="32dp"
        android:text="@string/RiddleTextPlaceholder"
        app:layout_constraintBottom_toTopOf="@+id/solutionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/guessEditText"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:layout_marginTop="360dp"
        android:hint="@string/solutionPrompt"
        app:layout_constraintBottom_toTopOf="@+id/scoreTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/solutionTextView"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:text="@string/solutionTextPlaceholder"
        app:layout_constraintBottom_toTopOf="@+id/randomRiddleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/giveUpBtn"
        android:layout_width="157dp"
        android:layout_height="96dp"
        android:text="@string/giveUpBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="215dp"
        android:layout_height="35dp"
        android:layout_marginTop="440dp"
        android:text="@string/scoreTextPlaceholder"
        app:layout_constraintBottom_toTopOf="@+id/solveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>